# selenium

./: README.md  pyproject.toml
docs/: Automação.xmind  selenium.xmind
src/: Curso_Selenium.ipynb  pagina.html
src/planilhas/: planilha_ogu.xlsx
src/site/: index.html  pagina2.html  pagina3.html  pagina4.html  pagina5.html  pagina6.html
src/site/css/: style.css
