[tool.poetry]
name = "automacao"
version = "0.1.0"
description = ""
authors = ["Evandro Avellar <evandro.avellar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.1.3"
ipykernel = "^6.13.0"
jupyterlab = "^3.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
